# WhatFishDo

./: .gitignore  LICENSE  README.md  app.py  data.py  detect.py  funcs.py  pyproject.toml  requirements.txt  stream.py  ui.py
assets/: data.py  detect.py  funcs.py  stream.py  ui.py
test/: session_test.py
