[project]
name = "WhatFishDo"
version = "1.0"
description = "An application for behaviour transcription from video data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python-headless>=4.11.0.86",
    "pandas>=2.2.3",
    "pyqt5>=5.15.11",
    "pytest>=8.3.5",
    "pytest-qt>=4.4.0",
    "ruff>=0.9.7",
]
[tool.pytest.ini_options]
pythonpath = ["."]
qt_api= "pyqt5"
